--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "wechaty": "^0.43.5"
   },
   "name": "wechaty-log-monitor",
-  "version": "1.2.1",
+  "version": "1.2.6",
   "description": "一个基于wechaty来进行wechaty devops的wechaty plugin, primarily for log monitoring.",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "@chatie/tsconfig": "^0.11.4",
+    "@chatie/eslint-config": "^0.12.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
